--- a/WebLog2SQL.csproj
+++ b/WebLog2SQL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="File.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Location.cs" />
     <Compile Include="WebLogDB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
