--- a/WebLog2SQL/packages.config
+++ b/WebLog2SQL/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="NLog" version="4.2.0" targetFramework="net45" />
-  <package id="NLog.Config" version="4.2.0" targetFramework="net45" />
-  <package id="NLog.Schema" version="4.2.0" targetFramework="net45" />
+  <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net451" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net451" />
+  <package id="NLog" version="4.3.3" targetFramework="net451" />
+  <package id="NLog.Config" version="4.3.3" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.3.0" targetFramework="net451" />
 </packages>
