Various performance enhancements.

--- a/WebLog2SQL/NLog.config
+++ b/WebLog2SQL/NLog.config
@@ -17,7 +17,7 @@
 
   <targets>
     <target name="Basic" xsi:type="File" fileName="${basedir}basic.log"/>
-    <target name="Event" xsi:type="File" fileName="${basedir}event.log"
+    <target name="Import" xsi:type="File" fileName="${basedir}import.log"
             layout="${longdate} ${message}"/>
     <target name="Error" xsi:type="File" fileName="${basedir}error.log"
             layout="${longdate} ${message}${newline}${exception:format=tostring}${newline}"/>
@@ -25,8 +25,8 @@
   </targets>
   <rules>
     <logger name="*" minlevel="Debug" writeTo="Debug" final="true" enabled="false"/>
-    <logger name="WebLog2SQL.File+Events" level="Info" writeTo="Event" final="true"/>
-    <logger name="*" minlevel="Info" writeTo="Basic"/>
     <logger name="*" minlevel="Error" writeTo="Error"/>
+    <logger name="WebLog2SQL.Importer" minLevel="Info" writeTo="Import" final="true"/>
+    <logger name="*" minlevel="Info" writeTo="Basic"/>
   </rules>
 </nlog>
